// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`limehome reducer should handle LOCATION_ONCHANGE 1`] = `
Object {
  "data": Array [],
  "hotels": Array [],
  "location": undefined,
  "mapCenter": Object {
    "value": Object {},
  },
  "proximity": Object {
    "value": "",
  },
}
`;

exports[`limehome reducer should return the initial state 1`] = `
Object {
  "data": Array [],
  "hotels": Array [],
  "location": Object {
    "value": "",
  },
  "mapCenter": Object {
    "value": Object {},
  },
  "proximity": Object {
    "value": "",
  },
}
`;
